<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_section_color"
        android:textColor="@color/white"
android:padding="@dimen/margin10"
        android:textSize="@dimen/font_12"
        android:text="@string/individual_info"/>
    <RelativeLayout
        android:padding="@dimen/margin5"
        android:layout_width="match_parent"
        android:background="@color/dark_row_color"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/national_code"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtNationalCode"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/light_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/name"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtName"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/dark_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/family"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtFamily"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/light_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/father_name"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtFatheName"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/dark_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/gender"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtGender"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/light_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/barrower_section"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtBarrowerSection"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/dark_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/birth_city"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtBirthCity"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/light_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/birth_date"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtBirthDate"/>






    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/dark_row_color"
        android:padding="@dimen/margin5"

        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/font_12"
            android:text="@string/address"

        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/credit_cause_value_color"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_12"
            android:id="@+id/txtAddress"/>






    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_section_color"
        android:textColor="@color/white"
        android:padding="@dimen/margin10"
        android:textSize="@dimen/font_12"
        android:text="@string/short_contracts"/>
<android.support.v7.widget.RecyclerView
    android:layout_width="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/recyclerConract"
    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_section_color"
        android:textColor="@color/white"
        android:padding="@dimen/margin10"
        android:textSize="@dimen/font_12"
        android:text="@string/statistics_alert"/>

<android.support.v7.widget.RecyclerView
    android:layout_width="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/recyclerInquiry"
    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>



</LinearLayout>