<?xml version="1.0" encoding="utf-8"?>


<!-- TODO: Update blank fragment layout -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sanjinehColor"
    android:paddingLeft="@dimen/margin10"
    android:paddingRight="@dimen/margin10"

    android:paddingBottom="@dimen/button_margin_button">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:id="@+id/imgLogoVerifyOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size8"

            app:srcCompat="@drawable/ic_logo" />


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/size8"
            android:padding="@dimen/padding_5"

            app:srcCompat="@drawable/ic_back" />


    </RelativeLayout>

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtPassword"
        android:layout_marginBottom="@dimen/size100"
        android:gravity="center"
        android:text="@string/timer_start_value"
        android:textColor="@color/white"
        android:textSize="@dimen/login_steps_text_size" />

    <TextView
        android:id="@+id/txtAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_marginTop="@dimen/margin10"
        android:gravity="right"
        android:text="@string/force_enter_password"

        android:textColor="@color/alert_incorrect_entry"

        android:textSize="@dimen/login_steps_text_size"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_gray" />


    <ProgressBar
        android:id="@+id/prg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEnter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size50"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnEnter"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRetry"
        android:text="@string/enter"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/button_text_size"
        app:backgroundTint="@color/yellow_button" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_margin_button"
        android:text="@string/retry_verfication"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/button_text_size"
        android:visibility="invisible"
        app:backgroundTint="@color/light_gray" />

</RelativeLayout>
